# elroy-x

./: README.md
fximu/launch/: fx.launch  fximu.launch
loam_livox/source/: laser_mapping.cpp  laser_mapping.hpp
panther_bringup/: package.xml
panther_bringup/config/: diagnostics.yaml  imu_bosch.yaml  motors.yaml  motors.yaml-org  motors.yaml-testing  motors.yaml-working
panther_bringup/launch/: bringup.launch  bringup.launch.org
panther_bringup/launch/include/: driver.launch  driver.launch-roboteq-working  frames.gv  imu.launch  kalman.launch  livox_lidar.launch  livox_lidar_rviz.launch  tfprovider.launch  usb_cam.launch  zed-latest.launch  zed-scan.launch  zed.launch  zed.launch.2.8  zed.launch.panther  zed.launch.rtabmap  zed.min.launch
panther_bringup/launch/include/tmp/: zed.launch-org  zed.launch.combined  zed_rtabmap.launch
panther_control/config/: control.yaml-testing  control.yaml-working  localization.yaml  teleop.yaml
panther_control/launch/: control.launch  record.launch  teleop.launch  teleop.launch.org  wandering.launch
panther_description/: package.xml
panther_description/meshes/: wheel_rf_link.STL
panther_gazebo/: CMakeLists.txt  package.xml
panther_gazebo/launch/: gazebo.launch
panther_gazebo/models/: astro.gazebo
panther_gazebo/tmp/: CMakeLists.txt  package.xml
panther_gazebo/tmp/launch/: empty_world.launch
panther_gazebo/tmp/urdf/: description.gazebo.xacro  lidar.gazebo.xacro
panther_navigation/cfg/: global_costmap_params.yaml  local_costmap_params.yaml
panther_navigation/config/: DWAplanner.yaml  costmap_common.yaml  planner.yaml  planner2.yaml
panther_navigation/config/zed/: zDWAplanner.yaml  zcostmap_common.yaml  zcostmap_global_laser.yaml  zcostmap_global_static.yaml  zcostmap_local.yaml  zplanner.yaml  zplanner2.yaml
panther_navigation/launch/: backpack_3d.launch  cartographer.launch-panther  gmapping.launch  livox_lidar.launch  move_base.launch  move_base.launch-org  octo.launch  rtabmap-params  rtabmap.launch  rtabmap.launch-broken  rtabmap.launch-org  rtabmap.launch.bak  teb_diff_drive.launch  test.launch  zed_rtabmap.launch
panther_robot/: package.xml
panther_visualization/: package.xml
panther_visualization/launch/: imu-display.launch
