<?xml version="1.0"?>
<package>
  <name>panther_bringup</name>
  <version>0.1.0</version>
  <description>
	This is a package with all driver and startup nodes
  </description>

  
  <maintainer email="griz11@twc.com">Dan Pollock</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/griz11/astro</url>

  <author email="raffaello@rnext.it">Raffaello Bonghi</author>
  <author email="griz11@twc.com">Dan Pollock</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>panther_description</run_depend>
  
  <run_depend>bno055_usb_stick</run_depend>
  <run_depend>imu_transformer</run_depend>

</package>
